--- a/src/uk/ac/nott/mrl/homework/client/device.css
+++ b/src/uk/ac/nott/mrl/homework/client/device.css
@@ -42,6 +42,7 @@
 	border-radius: 0.4em;
 	padding: 3px;
 	padding-right: 0.5em;
+	margin: 5px;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	white-space: nowrap;
