--- a/src/uk/ac/nott/mrl/homework/client/device.css
+++ b/src/uk/ac/nott/mrl/homework/client/device.css
@@ -1,5 +1,5 @@
 .device {
-	position: relative;
+	position: absolute;
 	border: 3px solid #579;
 	background-color: #79B;	
 	border-left: 0;
@@ -18,7 +18,7 @@
 }
 
 .deniedDevice {
-	position: relative;
+	position: absolute;
 	border: 3px solid #777;
 	background-color: #999;
 	border-left: 0;
@@ -49,7 +49,7 @@
 }
 
 .dragDevice {
-	position: relative;
+	position: absolute;
 	background-color: #79B;	
 	border: 3px solid #579;
 	border-radius: 0.4em;
