Improved UI interaction with edit dialog.

--- a/src/uk/ac/nott/mrl/homework/client/device.css
+++ b/src/uk/ac/nott/mrl/homework/client/device.css
@@ -88,6 +88,10 @@ body
 	float:left;
 }
 
+.glass {
+	background-color: rgba(0,0,0,0.5);
+}
+
 .dragDevice {
 	position: absolute;
 	background-color: #79B;	
