--- a/src/uk/ac/nott/mrl/homework/client/device.css
+++ b/src/uk/ac/nott/mrl/homework/client/device.css
@@ -109,10 +109,10 @@ body
 
 .deviceAnim
 {
-	-webkit-transition: top 4s ease, opacity 2s ease, visibility 2s ease, border-color 2s ease, background-color 2s ease, color 2s ease;
-	-moz-transition: top 4s ease, opacity 2s ease, visibility 2s ease, border-color 2s ease, background-color 2s ease, color 2s ease;
-	-o-transition: top 4s ease, opacity 2s ease, visibility 2s ease, border-color 2s ease, background-color 2s ease, color 2s ease;
-	transition: top 4s ease, opacity 2s ease, visibility 2s ease, border-color 2s ease, background-color 2s ease, color 2s ease;
+	-webkit-transition: top 4s ease, opacity 2s ease, visibility 2s ease, -webkit-transform 4s ease;
+	-moz-transition: top 4s ease, opacity 2s ease, visibility 2s ease;
+	-o-transition: top 4s ease, opacity 2s ease, visibility 2s ease;
+	transition: top 4s ease, opacity 2s ease, visibility 2s ease;
 }
 
 .popup {
